# methane-minder

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/api/v1/endpoints/: plumes.py
backend/app/services/: csv_to_geoparquet.py
backend/data/: README.md  plumes.geojson  plumes_data_dictionary.csv  plumes_raw_data.csv
backend/src/: hello.py
backend/src/app/api/v1/endpoints/: plumes.py  risk.py
backend/src/app/services/: csv_to_geoparquet.py  forecast.py
backend/src/data/: __init__.py  plumes_enriched.parquet
backend/tests/: test_main.py  test_plumes.py  test_risk.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/e2e/: vue.spec.ts
frontend/public/: methane-emissions.csv
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: App.spec.ts  RiskBadge.spec.ts
frontend/src/assets/: main.css
frontend/src/components/: Dashboard.vue  EmissionChart.vue  MapView.vue  RiskBadge.vue
frontend/tests/: dashboard.spec.ts
