[project]
name = "methane_minder_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "geopandas>=1.1.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "shapely>=2.1.1",
    "statsmodels>=0.14.4",
    "uuid>=1.30",
    "uvicorn[standard]>=0.34.3",
]
